2009-12-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/im2metaimage.m:

	- Add input arguments for image file extension and the possibility
	to contribute the image file listing, intead of using an internal
	DIR().

2009-11-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2mat.m:

	- In case of a time series, we assume that all frames for slice 1
	are in consecutive DICOM files. Then all the frames for slice 2,
	and so on.

	Note that the output matrix is permuted to have the indices in the
	order (I,J,N,F), where N is the slice index and F is the frame
	index.

2009-11-24  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2mat.m:

	- Add block to detect time series and create 4D volumes, if
	necessary.

	- If output filename is empty, call it 'im.mat'.

2009-11-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FileFormatToolbox/dcm2mat.m:

	- Read a batch of DICOM files, collate them and save as a single
	volume in a .mat file.

	* FileFormatToolbox/dcm2metaimage.m:

	- Fix bug with wrong function call.

2009-11-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* README:

	- Add scirunnrrd_index2world.m and scirunnrrd_world2index.m.

	* Add FileFormatToolbox/scirunnrrd_index2world.m:

	- SCIRUNNRRD_INDEX2WORLD Convert data volume indices to real world
	coordinates for NRRD volumes created by SCI
	applications (e.g. Seg3D).

	* Add FileFormatToolbox/scirunnrrd_world2index.m:

	- SCIRUNNRRD_WORLD2INDEX Convert real world coordinates to data
	volume indices for NRRD volumes created by SCI
	applications (e.g. Seg3D).

2009-09-11  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/PointsToolbox/cube_five_tessellation.m:

	- CUBE_FIVE_TESSELLATION Tessellation in 5 tetrahedra of a cube
	with perpendicular diagonals on opposite sides of the
	cube (non-stackable).

2009-09-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
